--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tensorflow==2.15.0
-keras==3.12.0
-streamlit
-pillow
-numpy
+tensorflow>=2.15.0,<2.16.0
+keras>=3.0.0
+streamlit>=1.28.0
+pillow>=10.0.0
+numpy>=1.24.0,<2.0.0
