--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-tensorflow==2.15.0; python_version < '3.12'
-tensorflow==2.16.1; python_version >= '3.12'
-flask>=3.0.0
-flask-cors>=4.0.0
-pillow>=10.0.0
-numpy>=1.24.0,<2.0.0
-gunicorn>=21.2.0
+tensorflow==2.15.0
+flask==3.0.0
+flask-cors==4.0.0
+pillow==10.0.0
+numpy==1.24.3
+gunicorn==21.2.0
